--- a/.github/workflows/ci_for_webui.yml
+++ b/.github/workflows/ci_for_webui.yml
@@ -28,4 +28,4 @@ jobs:
       uses: actions/upload-artifact@v4.1.0
       with:
         name: drop
-        path: "${{ runner.temp }}/WEBUI"
+        path: "\\\\my\\share\\${{ github.workflow }}\\${{ github.run_number }}"
