--- a/.github/workflows/ci_for_webui.yml
+++ b/.github/workflows/ci_for_webui.yml
@@ -21,7 +21,7 @@ jobs:
       run: dotnet restore $path_to_project
 
     - name: Build Service
-      run: dotnet build $path_to_project 
+      run: dotnet build $path_to_project --configuration $(BuildConfiguration) -r linux-x64
 
     - name: Publish Service
       run: dotnet publish $path_to_project -r linux-x64 --output ${{ runner.temp }}/output_path
