--- a/.github/workflows/ci_for_webui.yml
+++ b/.github/workflows/ci_for_webui.yml
@@ -31,9 +31,13 @@ jobs:
     - name: Publish Service
       run: dotnet publish $path_to_project -r linux-x64 --output $GITHUB_WORKSPACE/$output_path
 
-    - name: Publish Artifact drop
-      uses: actions/upload-artifact@v2.3.1
-      with:
-        name: drop
-        path: $GITHUB_WORKSPACE/$output_path
-        if-no-files-found: error
+    # - name: Publish Artifact drop
+    #   uses: actions/upload-artifact@v2.3.1
+    #   with:
+    #     name: drop
+    #     path: $GITHUB_WORKSPACE/$output_path
+    #     if-no-files-found: error
+    - name: Testing steps
+      run: |
+       cd ${{ github.workspace }}
+       ls
