--- a/.github/workflows/ci_for_webui.yml
+++ b/.github/workflows/ci_for_webui.yml
@@ -31,14 +31,10 @@ jobs:
     - name: Publish Service
       run: dotnet publish $path_to_project -r linux-x64 --output $GITHUB_WORKSPACE/$output_path
 
-    # - name: Publish Artifact drop
-    #   uses: actions/upload-artifact@v2.3.1
-    #   with:
-    #     name: drop
-    #     path: $GITHUB_WORKSPACE/$output_path
-    #     if-no-files-found: error
-    #  cd ${{ github.workspace }}
-    - name: Testing steps
-      run: |
-       cd $GITHUB_WORKSPACE
-       ls
+    - name: Publish Artifact drop
+      uses: actions/upload-artifact@v2.3.1
+      with:
+        name: drop
+        path: $GITHUB_WORKSPACE/CMHL.WEBUI
+        if-no-files-found: error
+
