--- a/.github/workflows/ci_for_webui.yml
+++ b/.github/workflows/ci_for_webui.yml
@@ -8,6 +8,7 @@ on:
 env:
   path_to_project: WEBUI/WEBUI.csproj
   output_path: CMHL.WEBUI
+  output_dir: CMHL.WEBUI.zip
   BuildConfiguration: Release
   system_debug: 'false'
 
@@ -29,12 +30,14 @@ jobs:
       run: dotnet build $path_to_project --configuration $BuildConfiguration -r linux-x64
 
     - name: Publish Service
-      run: dotnet publish $path_to_project -r linux-x64 --output $GITHUB_WORKSPACE/$output_path
+      run: |
+        dotnet publish $path_to_project -r linux-x64 --output $GITHUB_WORKSPACE/$output_path
+        zip -r $GITHUB_WORKSPACE/$output_dir $GITHUB_WORKSPACE/$output_path
 
     - name: Publish Artifact drop
       uses: actions/upload-artifact@v2.3.1
       with:
         name: drop
-        path: $GITHUB_WORKSPACE/CMHL.WEBUI
+        path: $GITHUB_WORKSPACE/output_dir
         if-no-files-found: error
 
