--- a/.github/workflows/ci_for_webui.yml
+++ b/.github/workflows/ci_for_webui.yml
@@ -33,7 +33,7 @@ jobs:
       run: |
         dotnet publish $path_to_project -r linux-x64 --output $GITHUB_WORKSPACE/$output_path
         zip -r $GITHUB_WORKSPACE/$output_dir $GITHUB_WORKSPACE/$output_path
-        cd $GITHUB_WORKSPACE/$output_path
+        cd $GITHUB_WORKSPACE
         ls
 
     # - name: Publish Artifact drop
