--- a/.github/workflows/ci_for_webui.yml
+++ b/.github/workflows/ci_for_webui.yml
@@ -36,10 +36,10 @@ jobs:
         cd $GITHUB_WORKSPACE
         ls
 
-    # - name: Publish Artifact drop
-    #   uses: actions/upload-artifact@v2.3.1
-    #   with:
-    #     name: drop
-    #     path: $GITHUB_WORKSPACE/output_dir
-    #     if-no-files-found: error
+    - name: Publish Artifact drop
+      uses: actions/upload-artifact@v2.3.1
+      with:
+        name: drop
+        path: $GITHUB_WORKSPACE/CMHL.WEBUI.zip
+        if-no-files-found: error
 
