--- a/.github/workflows/ci_for_webui.yml
+++ b/.github/workflows/ci_for_webui.yml
@@ -34,12 +34,13 @@ jobs:
         dotnet publish $path_to_project -r linux-x64 --output $GITHUB_WORKSPACE/$output_path
         zip -r $GITHUB_WORKSPACE/$output_dir $GITHUB_WORKSPACE/$output_path
         cd $GITHUB_WORKSPACE
+        pwd
         ls
 
     - name: Publish Artifact drop
       uses: actions/upload-artifact@v4
       with:
         name: drop
-        path: home/runner/work/WEBUI/WEBUI/CMHL.WEBUI.zip
+        path: /home/runner/work/WEBUI/WEBUI/CMHL.WEBUI.zip
         if-no-files-found: error
 
