--- a/.github/workflows/ci_for_webui.yml
+++ b/.github/workflows/ci_for_webui.yml
@@ -9,6 +9,7 @@ env:
   path_to_project: WEBUI/WEBUI.csproj
   output_path: CMHL.WEBUI
   output_zip: CMHL.WEBUI.zip
+  publish_path: /home/runner/work/WEBUI/WEBUI/CMHL.WEBUI/$output_zip
   BuildConfiguration: Release
   system_debug: 'false'
 
@@ -29,18 +30,22 @@ jobs:
     - name: Build Service
       run: dotnet build $path_to_project --configuration $BuildConfiguration -r linux-x64
 
-    - name: Publish Service
+    - name: testing step
       run: |
-        dotnet publish $path_to_project -r linux-x64 --output $GITHUB_WORKSPACE/$output_path
-        zip -r $GITHUB_WORKSPACE/$output_zip $GITHUB_WORKSPACE/$output_path
+        cd $GITHUB_ACTION_PATH
+        pwd
+        ls
 
-    - name: Publish Artifact drop
-      uses: actions/upload-artifact@v4
-      with:
-        name: drop
-        #path: /home/runner/work/WEBUI/WEBUI/CMHL.WEBUI
-        run: cd $GITHUB_WORKSPACE
-        path: $output_zip
-        if-no-files-found: error
-        retention-days: 1
+    # - name: Publish Service
+    #   run: |
+    #     dotnet publish $path_to_project -r linux-x64 --output $GITHUB_WORKSPACE/$output_path
+    #     zip -r $GITHUB_WORKSPACE/$output_zip $GITHUB_WORKSPACE/$output_path
+
+    # - name: Publish Artifact drop
+    #   uses: actions/upload-artifact@v4
+    #   with:
+    #     name: drop
+    #     path: /home/runner/work/WEBUI/WEBUI/CMHL.WEBUI/$output_zip
+    #     if-no-files-found: error
+    #     retention-days: 1
 
