--- a/.github/workflows/ci_for_webui.yml
+++ b/.github/workflows/ci_for_webui.yml
@@ -24,15 +24,15 @@ jobs:
       with:
         dotnet-version: 5.0.x
 
-    - name: Restore Service
-      run: dotnet restore $path_to_project
+    # - name: Restore Service
+    #   run: dotnet restore $path_to_project
 
-    - name: Build Service
-      run: dotnet build $path_to_project --configuration $BuildConfiguration -r linux-x64
+    # - name: Build Service
+    #   run: dotnet build $path_to_project --configuration $BuildConfiguration -r linux-x64
 
     - name: testing step
       run: |
-        echo $publish_path
+        echo $GITHUB_WORKSPACE
 
     # - name: Publish Service
     #   run: |
