--- a/.github/workflows/ci_for_webui.yml
+++ b/.github/workflows/ci_for_webui.yml
@@ -34,12 +34,13 @@ jobs:
       run: |
         dotnet publish $path_to_project -r linux-x64 --output $GITHUB_WORKSPACE/$output_path
         zip -r $GITHUB_WORKSPACE/$output_zip $GITHUB_WORKSPACE/$output_path
+        cd $GITHUB_WORKSPACE
 
     - name: Publish Artifact drop
       uses: actions/upload-artifact@v4
       with:
         name: drop
-        run: |
-          cd $GITHUB_WORKSPACE
-          pwd
+        path: ./$output_zip
+        if-no-files-found: error
+        retention-days: 1
 
