--- a/.github/workflows/ci_for_webui.yml
+++ b/.github/workflows/ci_for_webui.yml
@@ -39,7 +39,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: drop
-        path: /home/runner/work/WEBUI/WEBU/CMHL.WEBUI/*.zip
+        path: /home/runner/work/WEBUI/WEBUI/*.zip
         if-no-files-found: error
         retention-days: 1
 
