--- a/.github/workflows/ci_for_webui.yml
+++ b/.github/workflows/ci_for_webui.yml
@@ -9,7 +9,6 @@ env:
   path_to_project: WEBUI/WEBUI.csproj
   output_path: CMHL.WEBUI
   output_zip: CMHL.WEBUI.zip
-  publish_path: 
   BuildConfiguration: Release
   system_debug: 'false'
 
@@ -51,10 +50,13 @@ jobs:
        uses: actions/download-artifact@v4
        with:
          name: drop
-
+         
+     - name: Download a Build Artifact 
+       
+    
      - name: Copy via ssh 
-        uses: garygrossgarten/github-action-scp@v0.8.0
-        with:
+       uses: garygrossgarten/github-action-scp@v0.8.0
+       with:
           local: $GITHUB_WORKSPACE
           remote: /home/azureuser/WEBUI
           host: ${{ secrets.CMHL_PREPROD_TEST_HOSTT }} 
