--- a/.github/workflows/testtest.yml
+++ b/.github/workflows/testtest.yml
@@ -1,14 +1,36 @@
-name: .NET build & deploy Staging
+name: CI/CD Pipeline
 
 on:
+  push:
+    branches:
+      - master
   workflow_dispatch:
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v3
-    - name: Restore dependencies
-      run: echo "testing"
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Restore dependencies
+        run: echo "Build Success"
+
+  deploy-preprod:
+    runs-on: ubuntu-latest
+    needs: build
+    if: github.ref == 'refs/heads/master'
+
+    steps:
+      - name: Checkout code
+        run: echo "Preprod Deployment Done"
+
+  deploy-prod:
+    runs-on: ubuntu-latest
+    needs: build
+    if: github.event_name == 'workflow_dispatch'
+
+    steps:
+      - name: Checkout code
+        run: echo "Prod Deployment Done"
